--- a/Backend/Interview/pom.xml
+++ b/Backend/Interview/pom.xml
@@ -62,7 +62,7 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>3.0.4</version>
 		</dependency>
-		<!--        mybatis依赖-->
+
 		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus-boot-starter</artifactId>
@@ -111,6 +111,12 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.3.0</version> <!-- 最新兼容 Spring Boot 3 的版本 -->
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.10.0</version>
+		</dependency>
+
 
 	</dependencies>
 
