--- a/Backend/Interview/src/main/resources/application.yml
+++ b/Backend/Interview/src/main/resources/application.yml
@@ -5,16 +5,20 @@ server:
 
 spring:
   datasource:
+    url: jdbc:mysql://localhost:3306/interview_system?useUnicode=true&characterEncoding=UTF-8
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://localhost:3306/interview_system
+    password: 797789
+    username: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
     druid:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      password: 797789
-      username: root
+      initial-size: 5
+      max-active: 20
+
+
 
 
 mybatis-plus:
-  type-aliases-package: com.littlebug.pojo
+  type-aliases-package: com.little bug.pojo
   global-config:
     db-config:
       logic-delete-field: isDeleted  #全局逻辑删除
@@ -25,6 +29,7 @@ mybatis-plus:
 jwt:
   token:
     tokenExpiration: 120 #????,????
-    tokenSignKey: Interview123456  #???????? ???
+    tokenSignKey: Interview123456  #不是UTF-8？
+
 swagger:
   enabled: true
