--- a/Backend/Interview/pom.xml
+++ b/Backend/Interview/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 			<version>3.4.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+<!--			<version>5.3.18</version> &lt;!&ndash; 使用与你的Spring Boot版本匹配的版本 &ndash;&gt;-->
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -115,6 +120,16 @@
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>5.10.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+		<!-- WebClient 依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
 
