--- a/Backend/Interview/src/main/resources/application.yml
+++ b/Backend/Interview/src/main/resources/application.yml
@@ -19,10 +19,14 @@ spring:
     druid:
       initial-size: 5
       max-active: 20
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/interview_system
 
-ffmpeg:
-#  path: /usr/local/bin/ffmpeg  # Linux/macOS
-   path: D:\\Program File (x86)\\ffmpeg\\bin\\ffmpeg.exe  # Windows
+third:
+  party:
+    api:
+      url: http://localhost:5000/analyze
 
 
 
